--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      /* 🛠️ MEDIA QUERY: Desktop layout - pills side by side */
+      @media (min-width: 600px) {
+        .pill-row {
+          border: "1px solid red";
+          display: table;
+          /* width: 100%; */
+        }
+
+        .pill-col {
+          display: table-cell;
+          width: 50%;
+          vertical-align: top;
+          padding-right: 10px;
+        }
+
+        .pill-col:last-child {
+          padding-right: 0;
+        }
+      }
+
+      /* 🛠️ Mobile view spacing */
+      .pill-mobile {
+        padding-bottom: 10px;
+      }
+
+      @media (min-width: 600px) {
+        .pill-mobile {
+          padding-bottom: 0 !important;
+        }
+      }
+    </style>
   </head>
   <body>
     <center>
@@ -16,21 +48,13 @@
           border: 1px solid red;
           border-radius: 10px;
           font-family: Verdana, Geneva, sans-serif;
-          /* border-collapse: collapse; */
           border-spacing: 0;
           background-color: #fff;
         "
       >
-        <!-- LOGO  -->
+        <!-- LOGO -->
         <tr>
-          <td
-            class="logo"
-            style="
-              /* border: 1px solid blue; */
-              border-radius: 10px 10px 0 0;
-              padding: 10px 10px 5px 10px;
-            "
-          >
+          <td style="padding: 10px 10px 5px 10px">
             <img
               src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744284824/IG_COLOR_WHITE_BG_V2_2x_1_kr2bvv.webp"
               width="180px"
@@ -38,23 +62,14 @@
             />
           </td>
         </tr>
+
         <!-- BANNER -->
         <tr style="background-color: #eaf6ff">
-          <td
-            class="logo"
-            style="
-              /* border: 1px solid blue; */
-              border-radius: 10px 10px 0 0;
-              height: 200px;
-              padding: 10px;
-            "
-          >
+          <td style="height: 200px; padding: 10px">
             <p
               style="
-                /* border: 1px solid blue; */
                 text-align: center;
                 font-size: 16px;
-                font-style: normal;
                 font-weight: 700;
                 line-height: 20px;
               "
@@ -70,26 +85,18 @@
             </center>
           </td>
         </tr>
+
         <!-- MAIN -->
         <tr>
           <td
             class="main"
-            style="
-              border: 2px solid blue;
-              height: 200px;
-              padding: 10px;
-              vertical-align: top;
-            "
+            style="border: 2px solid blue; padding: 10px; vertical-align: top"
           >
-            <table
-              style="border: 2px solid green; width: 100%; border-spacing: 0"
-            >
+            <table style="width: 100%; border-spacing: 0">
               <!-- CONTENT -->
               <tr>
-                <td class="content">
-                  <p style="margin: 0">
-                    Hi <strong class="name">Robin Fernandes,</strong>
-                  </p>
+                <td>
+                  <p style="margin: 0">Hi <strong>Robin Fernandes,</strong></p>
                   <p style="margin: 10px 0 0 0">
                     Your ranking alerts have been triggered based on your
                     keyword performance. Review the details below to stay
@@ -97,35 +104,56 @@
                   </p>
                 </td>
               </tr>
-              <!-- WORKSPACE AND PROJECT -->
+
+              <!-- PILL ROW -->
               <tr>
-                <td style="border: 2px solid green; padding: 10px 0">
-                  <table
-                    style="
-                      border: 2px solid pink;
-                      width: 100%;
-                      border-spacing: 0;
-                    "
-                  >
-                    <tr>
-                      <td style="padding: 0">
-                        <span style="font-weight: 600">Workspace :</span>
-                        <span
-                          style="
-                            display: inline-block;
-                            vertical-align: middle;
-                            border: 1px solid;
-                            padding: 5px 10px;
-                            border-radius: 50px;
-                            /* line-height: 1; */
-                          "
-                          >Robin Workspace</span
-                        >
-                      </td>
-                    </tr>
-                  </table>
+                <td style="padding: 10px 0">
+                  <!-- 🛠️ DESKTOP SIDE-BY-SIDE -->
+                  <div class="pill-row">
+                    <div class="pill-col" style="padding-bottom: 5px">
+                      <table width="100%" cellpadding="0" cellspacing="0">
+                        <tr>
+                          <td>
+                            <span style="font-weight: 600">Workspace :</span>
+                            <span
+                              style="
+                                display: inline-block;
+                                vertical-align: middle;
+                                border: 1px solid;
+                                padding: 5px 10px;
+                                border-radius: 50px;
+                              "
+                            >
+                              Robin Workspace
+                            </span>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="pill-col">
+                      <table width="100%" cellpadding="0" cellspacing="0">
+                        <tr>
+                          <td>
+                            <span style="font-weight: 600">Project :</span>
+                            <span
+                              style="
+                                display: inline-block;
+                                vertical-align: middle;
+                                border: 1px solid;
+                                padding: 5px 10px;
+                                border-radius: 4px;
+                              "
+                            >
+                              Infidigit SEO India
+                            </span>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
                 </td>
               </tr>
+              <!-- END PILLS -->
             </table>
           </td>
         </tr>
