--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -135,16 +135,37 @@
                         <tr>
                           <td>
                             <span style="font-weight: 600">Project :</span>
+                            <!-- 📌 Updated pill span -->
                             <span
                               style="
                                 display: inline-block;
-                                vertical-align: middle;
+                                vertical-align: middle; /* 🆕 updated to middle */
                                 border: 1px solid;
                                 padding: 5px 10px;
                                 border-radius: 4px;
                               "
                             >
-                              Infidigit SEO India
+                              <!-- 🆕 Created inner table for icon and text -->
+                              <table cellpadding="0" cellspacing="0" border="0">
+                                <tr>
+                                  <td
+                                    style="
+                                      padding-right: 5px;
+                                      vertical-align: middle;
+                                    "
+                                  >
+                                    <img
+                                      height="20"
+                                      width="20"
+                                      src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744291329/Infidigit_Favicon_1_1_kew3ec.png"
+                                      style="display: block"
+                                    />
+                                  </td>
+                                  <td style="vertical-align: middle">
+                                    Infidigit SEO India
+                                  </td>
+                                </tr>
+                              </table>
                             </span>
                           </td>
                         </tr>
