gif replaced with image

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -210,7 +210,7 @@
             </p>
             <center>
               <img
-                src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744286242/alert-WYQZ24EFz8_ds6f7w.webp"
+                src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745821161/RankTracker_a1w9as.gif"
                 width="120px"
                 height="100px"
               />
