dashed border-bottom added to banner

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -196,7 +196,10 @@
 
         <!-- BANNER -->
         <tr style="background-color: #eaf6ff">
-          <td class="banner" style="height: 200px; padding: 10px">
+          <td
+            class="banner"
+            style="height: 200px; padding: 10px; border-bottom: 2px dashed #000"
+          >
             <p
               class="bold-font"
               style="
