border width and content fixed

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -235,9 +235,10 @@
                     Hi <strong class="bold-font">Robin Fernandes,</strong>
                   </p>
                   <p style="margin: 10px 0 0 0">
-                    Your ranking alerts have been triggered based on your
-                    keyword performance. Review the details below to stay
-                    informed.
+                    Your ranking alerts have been triggered due to changes in
+                    your keyword performance, comparing October 20-26, 2024, to
+                    October 13-19, 2024. Review the details below to stay
+                    updated.
                   </p>
                 </td>
               </tr>
@@ -263,7 +264,7 @@
                               style="
                                 display: inline-block;
                                 vertical-align: middle;
-                                border: 1px solid;
+                                border: 2px solid;
                                 padding: 5px 10px;
                                 border-radius: 50px;
                               "
@@ -291,7 +292,7 @@
                               style="
                                 display: inline-block;
                                 vertical-align: middle; /* 🆕 updated to middle */
-                                border: 1px solid;
+                                border: 2px solid;
                                 padding: 5px 10px;
                                 border-radius: 4px;
                               "
@@ -405,7 +406,7 @@
                                 cellspacing="0"
                                 style="
                                   display: inline-block;
-                                  border: 1px solid;
+                                  border: 2px solid;
                                   border-radius: 4px;
                                   background-color: #fff;
                                   padding: 6px 10px;
@@ -430,7 +431,7 @@
                                     class="bold-font"
                                     style="
                                       padding-right: 5px;
-                                      border-right: 1px solid #e2e8f0;
+                                      border-right: 2px solid #e2e8f0;
                                       font-weight: 600;
                                       font-size: 14px;
                                     "
@@ -863,7 +864,7 @@
                                 cellspacing="0"
                                 style="
                                   display: inline-block;
-                                  border: 1px solid;
+                                  border: 2px solid;
                                   border-radius: 4px;
                                   background-color: #fff;
                                   padding: 6px 10px;
@@ -888,7 +889,7 @@
                                     class="bold-font"
                                     style="
                                       padding-right: 5px;
-                                      border-right: 1px solid #e2e8f0;
+                                      border-right: 2px solid #e2e8f0;
                                       font-weight: 600;
                                       font-size: 14px;
                                     "
