Desktop: View more card icon aligned

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -139,6 +139,10 @@
           padding-bottom: 32px !important;
         }
 
+        .view-more-card .view-more-icon {
+          padding-top: 6px !important;
+        }
+
         .card-header {
           padding: 16px 24px !important;
         }
@@ -1254,7 +1258,14 @@
                     "
                   >
                     <tr>
-                      <td style="vertical-align: top; width: 22px">
+                      <td
+                        class="view-more-icon"
+                        style="
+                          vertical-align: top;
+                          width: 22px;
+                          padding-top: 4px;
+                        "
+                      >
                         <img
                           src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744369412/error-warning-line_jpmi0h.png"
                           alt=""
