over view card ligntning image alignment fixed

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -49,6 +49,11 @@
           padding-bottom: 28px !important;
         }
 
+        .overview-card-image img {
+          height: 22px !important;
+          padding-top: 8px !important;
+        }
+
         .card-header {
           padding: 12px 20px !important;
         }
@@ -137,6 +142,11 @@
         .overview-card,
         .view-more-card {
           padding-bottom: 32px !important;
+        }
+
+        .overview-card-image img {
+          height: 24px !important;
+          padding-top: 8px !important;
         }
 
         .view-more-card .view-more-icon {
@@ -372,6 +382,7 @@
                               >
                                 <tr>
                                   <td
+                                    class="overview-card-image"
                                     style="
                                       padding-right: 5px;
                                       vertical-align: middle;
@@ -381,7 +392,10 @@
                                       src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744366015/flashlight-line_x28ru5.png"
                                       width="20"
                                       height="20"
-                                      style="display: inline-block"
+                                      style="
+                                        display: inline-block;
+                                        padding-top: 8px;
+                                      "
                                     />
                                   </td>
                                   <td
@@ -830,6 +844,7 @@
                               >
                                 <tr>
                                   <td
+                                    class="overview-card-image"
                                     style="
                                       padding-right: 5px;
                                       vertical-align: middle;
@@ -839,7 +854,10 @@
                                       src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744366015/flashlight-line_x28ru5.png"
                                       width="20"
                                       height="20"
-                                      style="display: inline-block"
+                                      style="
+                                        display: inline-block;
+                                        padding-top: 8px;
+                                      "
                                     />
                                   </td>
                                   <td
