Tab, Desktop: View more card header and pill spacing fixed

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -105,9 +105,13 @@
         .overview-left,
         .overview-right {
           display: table-cell !important;
-          width: 25% !important;
           vertical-align: middle !important;
           padding-bottom: 0 !important;
+        }
+
+        .overview-left {
+          width: 0 !important;
+          padding-right: 8px;
         }
       }
 
