overview card project pill aligment fixed

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -435,41 +435,58 @@
                                 "
                               >
                                 <tr>
-                                  <td style="padding-right: 5px">
+                                  <td
+                                    style="padding-right: 5px"
+                                    valign="middle"
+                                  >
                                     <img
-                                      height="20px"
-                                      width="20px"
+                                      height="20"
+                                      width="20"
                                       src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/google_1_1_s5svny.png"
-                                    />
-                                  </td>
-                                  <td style="padding-right: 5px">
-                                    <img
-                                      height="18px"
-                                      width="21px"
-                                      src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/Flag_hdseof.png"
+                                      style="display: block"
                                     />
                                   </td>
                                   <td
-                                    class="bold-font"
+                                    style="padding-right: 5px"
+                                    valign="middle"
+                                  >
+                                    <img
+                                      height="18"
+                                      width="21"
+                                      src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/Flag_hdseof.png"
+                                      style="display: block"
+                                    />
+                                  </td>
+                                  <td
                                     style="
-                                      padding-right: 5px;
+                                      padding-right: 10px;
                                       border-right: 2px solid #e2e8f0;
                                       font-weight: 600;
                                       font-size: 14px;
+                                      color: #000;
+                                      padding-left: 5px;
+                                      white-space: nowrap;
                                     "
+                                    valign="middle"
                                   >
                                     India
                                   </td>
-                                  <td style="padding: 0 5px">
+                                  <td style="padding: 0 8px" valign="middle">
                                     <img
-                                      height="20px"
-                                      width="20px"
+                                      height="20"
+                                      width="20"
                                       src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/FirstAddon_1_ljd1fz.png"
+                                      style="display: block"
                                     />
                                   </td>
                                   <td
-                                    class="bold-font"
-                                    style="font-weight: 600; font-size: 14px"
+                                    style="
+                                      font-weight: 600;
+                                      font-size: 14px;
+                                      color: #000;
+                                      white-space: nowrap;
+                                    "
+                                    valign="middle"
                                   >
                                     Desktop
                                   </td>
@@ -897,41 +914,58 @@
                                 "
                               >
                                 <tr>
-                                  <td style="padding-right: 5px">
+                                  <td
+                                    style="padding-right: 5px"
+                                    valign="middle"
+                                  >
                                     <img
-                                      height="20px"
-                                      width="20px"
+                                      height="20"
+                                      width="20"
                                       src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/google_1_1_s5svny.png"
-                                    />
-                                  </td>
-                                  <td style="padding-right: 5px">
-                                    <img
-                                      height="18px"
-                                      width="21px"
-                                      src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/Flag_hdseof.png"
+                                      style="display: block"
                                     />
                                   </td>
                                   <td
-                                    class="bold-font"
+                                    style="padding-right: 5px"
+                                    valign="middle"
+                                  >
+                                    <img
+                                      height="18"
+                                      width="21"
+                                      src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/Flag_hdseof.png"
+                                      style="display: block"
+                                    />
+                                  </td>
+                                  <td
                                     style="
-                                      padding-right: 5px;
+                                      padding-right: 10px;
                                       border-right: 2px solid #e2e8f0;
                                       font-weight: 600;
                                       font-size: 14px;
+                                      color: #000;
+                                      padding-left: 5px;
+                                      white-space: nowrap;
                                     "
+                                    valign="middle"
                                   >
                                     India
                                   </td>
-                                  <td style="padding: 0 5px">
+                                  <td style="padding: 0 8px" valign="middle">
                                     <img
-                                      height="20px"
-                                      width="20px"
+                                      height="20"
+                                      width="20"
                                       src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/FirstAddon_1_ljd1fz.png"
+                                      style="display: block"
                                     />
                                   </td>
                                   <td
-                                    class="bold-font"
-                                    style="font-weight: 600; font-size: 14px"
+                                    style="
+                                      font-weight: 600;
+                                      font-size: 14px;
+                                      color: #000;
+                                      white-space: nowrap;
+                                    "
+                                    valign="middle"
                                   >
                                     Desktop
                                   </td>
