--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -254,7 +254,8 @@
                   </p>
                   <p style="margin: 10px 0 0 0">
                     Your ranking alerts have been triggered due to changes in
-                    your keyword performance, comparing October 20-26, 2024, to
+                    your keyword performance, comparing
+                    <strong class="bold-font">October 20-26, 2024,</strong> to
                     October 13-19, 2024. Review the details below to stay
                     updated.
                   </p>
