overview card header alignment fixed

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -51,11 +51,10 @@
 
         .overview-card-image img {
           height: 22px !important;
-          padding-top: 8px !important;
         }
 
         .card-header {
-          padding: 12px 20px !important;
+          padding: 12px 20px 8px 20px !important;
         }
 
         .card-main {
@@ -106,7 +105,6 @@
         .overview-right {
           display: table-cell !important;
           vertical-align: middle !important;
-          padding-bottom: 0 !important;
         }
 
         .overview-left {
@@ -150,7 +148,6 @@
 
         .overview-card-image img {
           height: 24px !important;
-          padding-top: 8px !important;
         }
 
         .view-more-card .view-more-icon {
@@ -158,7 +155,7 @@
         }
 
         .card-header {
-          padding: 16px 24px !important;
+          padding: 16px 24px 10px 24px !important;
         }
 
         .card-main {
@@ -397,10 +394,7 @@
                                       src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744366015/flashlight-line_x28ru5.png"
                                       width="20"
                                       height="20"
-                                      style="
-                                        display: inline-block;
-                                        padding-top: 8px;
-                                      "
+                                      style="display: block"
                                     />
                                   </td>
                                   <td
@@ -876,10 +870,7 @@
                                       src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744366015/flashlight-line_x28ru5.png"
                                       width="20"
                                       height="20"
-                                      style="
-                                        display: inline-block;
-                                        padding-top: 8px;
-                                      "
+                                      style="display: block"
                                     />
                                   </td>
                                   <td
