CTA's links added

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -805,7 +805,7 @@
                               "
                             >
                               <a
-                                href="https://your-link.com"
+                                href="https://app.infigrowth.com/rank-tracker/overview"
                                 target="_blank"
                                 style="
                                   color: #ffffff;
@@ -1273,7 +1273,7 @@
                               "
                             >
                               <a
-                                href="https://your-link.com"
+                                href="https://app.infigrowth.com/rank-tracker/overview"
                                 target="_blank"
                                 style="
                                   color: #ffffff;
@@ -1374,7 +1374,7 @@
                                     "
                                   >
                                     <a
-                                      href="https://your-link.com"
+                                      href="https://app.infigrowth.com/rank-tracker/overview"
                                       target="_blank"
                                       style="
                                         color: #ffffff;
