Complete CTA Link

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -780,44 +780,47 @@
                         align="center"
                         style="padding: 0 14px 15px 14px"
                       >
-                        <table
-                          cellpadding="0"
-                          cellspacing="0"
-                          border="0"
-                          style="
-                            border-radius: 6px;
-                            overflow: hidden;
-                            width: 100%;
-                          "
+                        <a
+                          href="https://app.infigrowth.com/rank-tracker/overview"
+                          target="_blank"
                         >
-                          <tr>
-                            <td
-                              align="center"
-                              bgcolor="#039BE5"
-                              style="
-                                padding: 12px 24px;
-                                font-size: 16px;
-                                font-weight: bold;
-                                font-family: Arial, sans-serif;
-                                color: #ffffff;
-                                text-decoration: none;
-                                border-radius: 6px;
-                              "
-                            >
-                              <a
-                                href="https://app.infigrowth.com/rank-tracker/overview"
-                                target="_blank"
+                          <table
+                            cellpadding="0"
+                            cellspacing="0"
+                            border="0"
+                            style="
+                              border-radius: 6px;
+                              overflow: hidden;
+                              width: 100%;
+                            "
+                          >
+                            <tr>
+                              <td
+                                align="center"
+                                bgcolor="#039BE5"
                                 style="
+                                  padding: 12px 24px;
+                                  font-size: 16px;
+                                  font-weight: bold;
+                                  font-family: Arial, sans-serif;
                                   color: #ffffff;
                                   text-decoration: none;
-                                  display: inline-block;
+                                  border-radius: 6px;
                                 "
                               >
-                                Review Your Rankings Now
-                              </a>
-                            </td>
-                          </tr>
-                        </table>
+                                <span
+                                  style="
+                                    color: #ffffff;
+                                    text-decoration: none;
+                                    display: inline-block;
+                                  "
+                                >
+                                  Review Your Rankings Now
+                                </span>
+                              </td>
+                            </tr>
+                          </table>
+                        </a>
                       </td>
                     </tr>
                   </table>
@@ -1248,44 +1251,47 @@
                         align="center"
                         style="padding: 0 14px 15px 14px"
                       >
-                        <table
-                          cellpadding="0"
-                          cellspacing="0"
-                          border="0"
-                          style="
-                            border-radius: 6px;
-                            overflow: hidden;
-                            width: 100%;
-                          "
+                        <a
+                          href="https://app.infigrowth.com/rank-tracker/overview"
+                          target="_blank"
                         >
-                          <tr>
-                            <td
-                              align="center"
-                              bgcolor="#039BE5"
-                              style="
-                                padding: 12px 24px;
-                                font-size: 16px;
-                                font-weight: bold;
-                                font-family: Arial, sans-serif;
-                                color: #ffffff;
-                                text-decoration: none;
-                                border-radius: 6px;
-                              "
-                            >
-                              <a
-                                href="https://app.infigrowth.com/rank-tracker/overview"
-                                target="_blank"
+                          <table
+                            cellpadding="0"
+                            cellspacing="0"
+                            border="0"
+                            style="
+                              border-radius: 6px;
+                              overflow: hidden;
+                              width: 100%;
+                            "
+                          >
+                            <tr>
+                              <td
+                                align="center"
+                                bgcolor="#039BE5"
                                 style="
+                                  padding: 12px 24px;
+                                  font-size: 16px;
+                                  font-weight: bold;
+                                  font-family: Arial, sans-serif;
                                   color: #ffffff;
                                   text-decoration: none;
-                                  display: inline-block;
+                                  border-radius: 6px;
                                 "
                               >
-                                Review Your Rankings Now
-                              </a>
-                            </td>
-                          </tr>
-                        </table>
+                                <span
+                                  style="
+                                    color: #ffffff;
+                                    text-decoration: none;
+                                    display: inline-block;
+                                  "
+                                >
+                                  Review Your Rankings Now
+                                </span>
+                              </td>
+                            </tr>
+                          </table>
+                        </a>
                       </td>
                     </tr>
                   </table>
@@ -1349,44 +1355,47 @@
                           <!-- VIEW MORE BUTTON -->
                           <tr>
                             <td align="center" style="padding: 0">
-                              <table
-                                cellpadding="0"
-                                cellspacing="0"
-                                border="0"
-                                style="
-                                  border-radius: 6px;
-                                  overflow: hidden;
-                                  width: 100%;
-                                "
+                              <a
+                                href="https://app.infigrowth.com/rank-tracker/overview"
+                                target="_blank"
                               >
-                                <tr>
-                                  <td
-                                    align="center"
-                                    bgcolor="#039BE5"
-                                    style="
-                                      padding: 12px 24px;
-                                      font-size: 16px;
-                                      font-weight: bold;
-                                      font-family: Arial, sans-serif;
-                                      color: #ffffff;
-                                      text-decoration: none;
-                                      border-radius: 6px;
-                                    "
-                                  >
-                                    <a
-                                      href="https://app.infigrowth.com/rank-tracker/overview"
-                                      target="_blank"
+                                <table
+                                  cellpadding="0"
+                                  cellspacing="0"
+                                  border="0"
+                                  style="
+                                    border-radius: 6px;
+                                    overflow: hidden;
+                                    width: 100%;
+                                  "
+                                >
+                                  <tr>
+                                    <td
+                                      align="center"
+                                      bgcolor="#039BE5"
                                       style="
+                                        padding: 12px 24px;
+                                        font-size: 16px;
+                                        font-weight: bold;
+                                        font-family: Arial, sans-serif;
                                         color: #ffffff;
                                         text-decoration: none;
-                                        display: inline-block;
+                                        border-radius: 6px;
                                       "
                                     >
-                                      Review All Alerts
-                                    </a>
-                                  </td>
-                                </tr>
-                              </table>
+                                      <span
+                                        style="
+                                          color: #ffffff;
+                                          text-decoration: none;
+                                          display: inline-block;
+                                        "
+                                      >
+                                        Review All Alerts
+                                      </span>
+                                    </td>
+                                  </tr>
+                                </table>
+                              </a>
                             </td>
                           </tr>
                         </table>
