--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -404,7 +404,7 @@
                                       font-size: 16px;
                                       color: #000;
                                       vertical-align: middle;
-                                      white-space: nowrap;
+                                      white-space: nowrap !important;
                                     "
                                   >
                                     Overview of Alerts for Campaign :
@@ -883,7 +883,7 @@
                                       font-size: 16px;
                                       color: #000;
                                       vertical-align: middle;
-                                      white-space: nowrap;
+                                      white-space: nowrap !important;
                                     "
                                   >
                                     Overview of Alerts for Campaign :
