footer text aligned to center

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -1736,7 +1736,11 @@
         <tr>
           <td
             class="footer"
-            style="padding: 10px 10px 20px 10px; line-height: 18px"
+            style="
+              padding: 10px 10px 20px 10px;
+              line-height: 18px;
+              text-align: center;
+            "
           >
             You are receiving this email as part of your Infigrowth account. We
             strive to provide valuable insights, but if you’d like to make
